--- a/Gioco.htm
+++ b/Gioco.htm
@@ -16,7 +16,7 @@
             <p class="spazim"><img src="image/Cacciatorpediniere HMS Maori.jpg"  alt="cacciatorpediniere HMS Maori" width="100%" height="100%" style="max-height:100%; max-width:100%"></p> 
           </div>
           <div class="infos">
-            <p class="descn"> INFORMAZIONI <br><br>Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini; Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua e al suo armamento speciale, le cariche di profondità; un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze
+            <p class="descn"> INFORMAZIONI <br><br>Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini. Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua e al suo armamento speciale, le cariche di profondità, un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità esplode, unico problema è che non possono essere sganciate a lunghe distanze.
               <br><br>STATISTICHE
               <br><br>  Velocità(4) Visibilità(5) RaggioSonar(6)
               <br><br>Cannoni: Gittata(2) Danni(20)
@@ -34,7 +34,7 @@
             <p class="spazim"><img src="image/Incrociatore leggero HMS Manchester.jpg"  alt="incrociatore HMS Manchester" width="100%" height="100%" style="max-height:100%; max-width:100%"></p> 
           </div>
           <div class="infos">
-            <p class="descn"> INFORMAZIONI <br><br>L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile, con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa; quando il sommergibile entrerà nella casella minata, farà detonare le mine
+            <p class="descn"> INFORMAZIONI <br><br>L’incrociatore HMS Manchester è una buona nave da scorta, ottima anche per la caccia al sommergibile, ha una velocità minore del cacciatorpediniere ma cannoni più precisi. L’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa. Se il sommergibile entrerà nella casella minata farà detonare gli esplosivi.
               <br><br>STATISTICHE
               <br><br>  Velocità(3) Visibilità(5) RaggioSonar(5)
               <br><br>Cannoni: Gittata(3) Danni(20)
@@ -52,7 +52,7 @@
             <p class="spazim"><img src="image/Incrociatore Pesante HMS York.jpg" alt="incrociatore pesante HMS York" width="100%" height="100%" style="max-height:100%; max-width:100%"></p>
           </div>
           <div class="infos">
-            <p class="descn"> INFORMAZIONI <br><br>L’incrociatore pesante HMS York è una buona fusione tra potenza di fuoco e mobilità, non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato; con l’utilizzo di una catapulta idraulica, si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile, non è obbligatorio che il sommergibile sia individuato 
+            <p class="descn"> INFORMAZIONI <br><br>L’incrociatore pesante HMS York è una buona fusione tra potenza di fuoco e mobilità, non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro. Il suo armamento speciale è il Bombardiere imbarcato. Con l’utilizzo di una catapulta idraulica, può lanciare un bombardiere leggero che sgancia un carica in grado di stanare un possibile sommergibile.
               <br><br>STATISTICHE
               <br><br>  Velocità(3) Visibilità(4) RaggioSonar(4)
               <br><br>Cannoni: Gittata(3) Danni(25)
@@ -70,7 +70,7 @@
             <p class="spazim"><img src="image/Corazzata HMS King George V.jpg" alt="corazzata HMS King George V" width="100%" height="100%" style="max-height:100%; max-width:100%"></p>
           </div>
           <div class="infos">
-            <p class="descn"> INFORMAZIONI <br><br>La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile; questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce, il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere
+            <p class="descn"> INFORMAZIONI <br><br>La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile. Questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare ciò che colpisce. Il suo armamento speciale è il sovraccarico motori grazie al quale, la nave aumenta la distanza che può percorrere per un breve lasso di tempo.
               <br><br>STATISTICHE
               <br><br>  Velocità(3) Visibilità(4) RaggioSonar(3)
               <br><br>Cannoni: Gittata(5) Danni(30)
@@ -88,7 +88,7 @@
             <p class="spazim"><img src="image/Portaerei HMS Ark Royal.jpg" alt="Portaerei HMS Ark Royal" width="100%" height="100%" style="max-height:100%; max-width:100%"></p>
           </div>
           <div class="infos">
-            <p class="descn"> INFORMAZIONI <br><br>La HMS Ark Royal è l’ammiraglia della Royal Navy, Questa maestosa nave ha come armamento principale il ponte di volo da cui i suoi aerei possono partire e distruggere i bersagli, ha tre tipologie di ’aerei: il bombardiere; con cui può danneggiare, il ricognitore con cui può rilevare le navi nemiche e l’aereo sonar è in grado di sganciare piccoli rilevatori sonar in mare con cui trovare possibili sommergibili
+            <p class="descn"> INFORMAZIONI <br><br>La HMS Ark Royal è l’ammiraglia della Royal Navy, questa maestosa nave ha come armamento principale il ponte di volo da cui i suoi aerei possono partire e distruggere i bersagli. Ha tre tipologie di aerei: il bombardiere con cui può danneggiare, il ricognitore con cui può rilevare il sommergibile se in superficie e l’aereo sonar che è in grado di rivelare la distanza dal sommergibile anche in caso sia sommerso.
               <br><br>STATISTICHE
               <br><br>  Velocità(3) Visibilità(4) RaggioSonar(4)
               <br><br>Cannoni: Non presenti
